--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2358,7 +2358,11 @@ corr&eacute;ligionaires (voir aussi <a href="../GdT-TAN-Store/GdT-TAN-Store.html
  multiplicatives. Une introduction
  agr&eacute;ment&eacute;e d'exercices</i></emph>. 
 <span class="moinsimportant">Les moyennes sont obtenues
- de fa&ccedil;on &eacute;l&eacute;mentaire via la m&eacute;thode de convolution.</span>
+ de fa&ccedil;on &eacute;l&eacute;mentaire via la m&eacute;thode de
+  convolution.</span>
+<span class="moinsimportant">Ce cours est devenu une
+  partie de ce <a  class="someword"
+  href="https://link.springer.com/gp/book/9783030731687">livre</a>.</span>
 </li>
 <!-- --------------------------------------------------------------------- -->
 <li> -&#9829;-
@@ -2368,6 +2372,9 @@ corr&eacute;ligionaires (voir aussi <a href="../GdT-TAN-Store/GdT-TAN-Store.html
  agr&eacute;ment&eacute;e d'exercices</i></emph>. 
 <span class="moinsimportant">Les moyennes sont obtenues
  de fa&ccedil;on analytique via une formule de Perron tronqu&eacute;e.</span>
+<span class="moinsimportant">Ce cours est devenu une
+  partie de ce <a  class="someword"
+  href="https://link.springer.com/gp/book/9783030731687">livre</a>.</span>
 </li> 
 <!-- --------------------------------------------------------------------- -->
 <li> -&#8962;-
@@ -2377,6 +2384,9 @@ corr&eacute;ligionaires (voir aussi <a href="../GdT-TAN-Store/GdT-TAN-Store.html
  agr&eacute;ment&eacute;e d'exercices</i></emph>.
 <span class="moinsimportant">Les moyennes sont obtenues
  de fa&ccedil;on analytique via une formule de Perron lisse.</span>
+<span class="moinsimportant">Ce cours est devenu une
+  partie de ce <a  class="someword"
+  href="https://link.springer.com/gp/book/9783030731687">livre</a>.</span>
 </li> 
 <!-- --------------------------------------------------------------------- -->
 <li> -&#10209;-
