--- a/CoursKolkata/index.html
+++ b/CoursKolkata/index.html
@@ -45,15 +45,17 @@ MathJax.Hub.Config({
 <div class="page content wrapper">
 <strong class="h1" id="logo">The Kolkata Lectures, 2022</strong>
 
-<i><strong class="h2"><span style="color:blue">On the Transference Principle for
-      Primes</span>.
-    <br>
-      Enveloping Sieve, Majorant Property and some Examples</strong> </i>
   <br>
     <script language="javascript">
   BandeauGeneral(1, "../", 3);
 </script>
 
+<i><strong class="h2"><span style="color:#0000b3">On the Transference Principle for
+      Primes</span>.
+    <br>
+     <span style="color:#4d0099"> Enveloping Sieve, Majorant Property
+       and some Examples
+    </span></strong> </i>
 <br><br>
 
 
