--- a/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
+++ b/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
@@ -65,8 +65,8 @@ MathJax.Hub.Config({
 
 <BODY class="pas_surlignable page_rubrique">
 <div class="w3-display-container w3-wide" id="logo">
-  <img class="w3-image" src="../trucs/EnteringTheKotorBay2014-3.JPG"
-       alt="Entering the Kotor Bay: Ostrvo" title="Entering the Kotor Bay: Ostrvo" width="100%">
+  <img class="w3-image" src="../trucs/Excursions-corrections.jpg"
+       alt="Working on Excursions in MNT" title="Working on Excursions in MNT" width="100%">
     <div class="w3-display-left w3-padding-large">
       <h1 class="w3-jumbo w3-text-white">Excursions in
    Multiplicative Number Theory:</h1>
@@ -108,18 +108,20 @@ MathJax.Hub.Config({
 
 
 <ol class="typos">
-  <li>Exercise 1.12 should be:
+  <li><span class="titre">Exercise 1.12</span>, thanks to J. Avigdor from Charenton Le Pont.
+
+    <div class="typo"> The question should be:
       <blockquote>
       Show that we have $\varphi(n)\ge
       \bigl($<span style="color:#6633CC;font-weight:bold">
 	  ${\frac{2}{9}}$</span>
       ${}\bigr)^{{1}/{3}}n^{{2}/{3}}$ for all $n\ge 1$.
       </blockquote>
-      &nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;
       <i> A <span style="color:#6633CC;font-weight:bold">$\frac{9}{2}$</span>
 	took the place of
 	the <span style="color:#6633CC;font-weight:bold">$\frac{2}{9}$</span>
 	in the book</i>.
+      </div>
   </li>
 </ol>
 
