--- a/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
+++ b/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
@@ -108,7 +108,7 @@ MathJax.Hub.Config({
 
 
 <ol class="typos">
-  <li><span class="titre">Exercise 1.12</span>, thanks to J. Avigdor from Charenton Le Pont.
+  <li><span class="titre">Exercise 1.12</span>.
 
     <div class="typo"> The question should be:
       <blockquote>
@@ -120,7 +120,8 @@ MathJax.Hub.Config({
       <i> A <span style="color:#6633CC;font-weight:bold">$\frac{9}{2}$</span>
 	took the place of
 	the <span style="color:#6633CC;font-weight:bold">$\frac{2}{9}$</span>
-	in the book</i>.
+	in the book</i>. Thanks to J. Avigdor from Charenton Le Pont
+	for spotting this typo.
       </div>
   </li>
 </ol>
