paper on Solitaire

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1700,10 +1700,13 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
   <span class="thema">Combinatorial problems</span>
     <ol>
   <!-- ============================= -->
-  <li class="paper preprint"><script language="javascript">
-      Preprint("A stronger model for peg solitaire, II", "",
-      "QuadratiqueQuatro.pdf", 2008, 27, "");
-      nbrp();</script>
+  <li class="paper"><script language="javascript">
+      Paper("A Stronger Model for Peg Solitaire", "",
+	    "QuadratiqueQuatro.pdf",
+	    "http://www.ramanujanmathsociety.org/news-letter/",
+	    "Mathematics Newsletter",
+	    "vol. 32, nb. 2", 2022, "34--48", "");
+      nbr();</script>
     <div class="resumecontent">The main problem addressed here is to
       decide whether it is or not possible to go from a given position on
       a peg-solitaire board to another one. No non-trivial sufficient
