--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1702,10 +1702,10 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
   <!-- ============================= -->
   <li class="paper"><script language="javascript">
       Paper("A Stronger Model for Peg Solitaire", "",
-	    "QuadratiqueQuatro.pdf",
+	    "PegSolitaireMNL-Dec-21-Mar-22.pdf",
 	    "http://www.ramanujanmathsociety.org/news-letter/",
 	    "Mathematics Newsletter",
-	    "vol. 32, nb. 2", 2022, "34--48", "");
+	    "vol. 32, nb. 2", 2021, "35--49", "");
       nbr();</script>
     <div class="resumecontent">The main problem addressed here is to
       decide whether it is or not possible to go from a given position on
