paper on Solitaire

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1705,7 +1705,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
 	    "PegSolitaireMNL-Dec-21-Mar-22.pdf",
 	    "http://www.ramanujanmathsociety.org/news-letter/",
 	    "Mathematics Newsletter",
-	    "vol. 32, nb. 2", 2021, "35--49", "");
+	    "vol. 32 no. 2", 2021, "35--49", "");
       nbr();</script>
     <div class="resumecontent">The main problem addressed here is to
       decide whether it is or not possible to go from a given position on
