Photos Souk des sciences

--- a/Jeux/IndexJeux-en.html
+++ b/Jeux/IndexJeux-en.html
@@ -1032,6 +1032,8 @@ If you use part of the material here, I
 <center>
 <hr width="70%" size=10 color="blue">
 </center>
+  <img class="w3-image" src="../trucs/Souksciences2018-1-petit.JPG" width="360px"
+       title="Souk des Sciences, 2018">
 <center>
 <div class="oddselection" style="width:65%;">
 <center>
@@ -1068,7 +1070,10 @@ If you use part of the material here, I
   <BR>
   <i>(2008), pages 1--4.</i>
 </li>
-
+<li><br>
+  <img class="w3-image" src="../trucs/Souksciences2018-2-petit.JPG" width="250px"
+     title="Souk des Sciences, 2018">
+</li>
 </ol>
 </div>
 <hr width="30%" size=3 color="lightblue">
