--- a/Jeux/IndexJeux.html
+++ b/Jeux/IndexJeux.html
@@ -1039,6 +1039,8 @@ m&ecirc;me accueillie &agrave; bras ouverts ! Pensez de temps &agrave; autre
 <center>
 <hr width="70%" size=10 color="blue">
 </center>
+  <img class="w3-image" src="../trucs/Souksciences2018-1-petit.JPG" width="360px"
+       title="Souk des Sciences, 2018">
 <center>
 <div class="oddselection" style="width:65%;">
 <center>
@@ -1073,7 +1075,11 @@ m&ecirc;me accueillie &agrave; bras ouverts ! Pensez de temps &agrave; autre
   <a   class="someword" href="http://iml.univ-mrs.fr/~ramare/Jeux/JointLandscape.pdf">
   Joint landscape on a peg solitaire board</a>.
   <BR>
-  <i>(2008), pages 1--4.</i>
+    <i>(2008), pages 1--4.</i>
+    <br>
+<li><br>
+  <img class="w3-image" src="../trucs/Souksciences2018-2-petit.JPG" width="250px"
+     title="Souk des Sciences, 2018">
 </li>
 
 </ol>
