--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -569,9 +569,20 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       x}}\Lambda(n)/n-\log x+\gamma$
       differs from $(\psi(x)-x)/x$&nbsp; by a well controlled function.
       We deduce very precise numerical results from this formula.
+      Corrigendum
+      <a href="Corrigendum-PsiTildeSimple-Acta-02.pdf">
+      here</a>.
     </div>
   </li>
-  <!-- ============================= -->
+ <!-- ============================= -->
+    <li class="paper preprint"><script language="javascript">
+	Preprint("Corrigendum to ``Explicit estimates for the summatory function of ${\Lambda}(n)/n$ from the one of ${\Lambda}(n)$''",
+	"", "Corrigendum-PsiTildeSimple-Acta-02.pdf", 2022, 3, "Submitted");
+	nbrp();</script>
+      <div class="resumecontent">
+      </div>
+    </li>
+    <!-- ============================= -->
   <li class="paper"><script language="javascript">
       Paper("Some elementary explicit bounds for two mollifications of the Moebius function",
       "", "MuLog-4.pdf",
