--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1696,6 +1696,27 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
 	Q}\Lambda_f(m)/m = \kappa\log Q + \eta_0 + O(1/\log(2Q)^h)$. 
       </div>
     </li>
+   <!-- ============================= -->
+  <li class="paper"><script language="javascript">
+      Paper("The number of rational numbers determined by large sets of sifted integers",
+      "", "DSOF-14-withbib.pdf",
+      "https://www.springer.com/journal/12044",
+      "Proceedings - Mathematical Sciences (Published by the Indian Academy of Sciences)",
+      "vol. ", 2022, "13pp",
+      "https://doi.org/10.1007/s12044-022-00698-z");
+      nbr();</script>
+    <div class="resumecontent">
+      We prove that the number of fractions $h_1/h_2$ of integers
+  $h_1,h_2$ a subset $\mathcal{A}\subset\mathcal{H}\cap[1,X]$ is at least
+  $\alpha X/(\log X)^{3/2}$ where $\mathcal{H}$ is the
+  set of $p-1$, $p$ being a prime such that $p+1$ is a sum of two coprime
+  squares. So, this number of fractions is
+  $\gg_\varepsilon\alpha^{1+\varepsilon}|\mathcal{A}|^2$, where
+  $\varepsilon$ is any positive real number. We take this opportunity
+  to describe a geometrical view of the sieve and its usage to study
+  integer sequences.
+    </div>
+  </li>
  <!-- ======================================================================= -->
 <!-- ======================================================================= -->
 <br>
