--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -576,7 +576,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
   </li>
  <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
-	Preprint("Corrigendum to ``Explicit estimates for the summatory function of ${\Lambda}(n)/n$ from the one of ${\Lambda}(n)$''",
+	Preprint("Corrigendum to ``Explicit estimates for the summatory function of $\Lambda(n)/n$ from the one of $\Lambda(n)$''",
 	"", "Corrigendum-PsiTildeSimple-Acta-02.pdf", 2022, 3, "Submitted");
 	nbrp();</script>
       <div class="resumecontent">
