--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1091,7 +1091,7 @@ $
   </li>
   <!-- ============================= -->
   <li class="paper software"><script language="javascript">
-      Software("Sage: Computing Lattice Invariant Euler Products Library", "" ,
+      Software("Sage Library: Computing Lattice Invariant Euler Products", "" ,
       "LatticeInvariantEulerProducts-06.sage", 2020,533,
       "Addendum to 'Fast multi-precision computation of some Euler products'");
       nbrs();</script>
@@ -1225,7 +1225,7 @@ $
 <!-- ======================================================================= -->
 <!-- ======================================================================= -->
   <li><a name="Distribution" class="dontmention"></a>
-  <span class="thema">Distribution of polynomial values</span>
+  <span class="thema">Polynomial values / Number fieds</span>
   <ol>
     <!-- ============================= -->
     <li class="paper"><script language="javascript">
@@ -1291,6 +1291,27 @@ $
 	information of the distribution of primes in (rather large)
 	arithmetic progressions, 
 	we prove that every integer $\ge\exp(524)$&nbsp;  is a sum of seven non negative cubes.
+      </div>
+  </li>
+  <!-- ============================= -->
+    <li class="paper"><script language="javascript">
+	Paper("Counting ideals in ray classes",
+	"Sanoli Gun and Jyothsnaa Sivaraman", "",
+	"https://www.worldscientific.com/worldscinet/ijnt",
+	"International Journal of Number Theory",
+	"vol. ? no ?", 2022, "??--??",
+	"http://dx.doi.org/??");
+	nbr();</script>
+      <div class="resumecontent">
+	Let $\mathbb{K}$ be a number field and $\mathfrak{q}$ an integral ideal in $\mathcal{O}_{\mathbb{K}}$.
+ A result of Tatuzawa from 1973 computes the
+ asymptotic (with an error term) for the number of ideals
+ with norm at most $x$ in a class of the narrow ray class group
+ of $\mathbb{K}$ modulo $\mathfrak{q}$. This result bounds the error term with a
+ constant whose dependence on $\mathfrak{q}$ is explicit but 
+ dependence on $\mathbb{K}$ is not explicit.
+ The aim of this paper is to prove this asymptotic with a fully 
+ explicit bound for the error term.
       </div>
   </li>
   </ol><br>
