--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1121,7 +1121,7 @@ $
       "http://fa.home.amu.edu.pl/",
       "Functiones et Approximatio, Commentarii Mathematici", 
       "vol. 65 no. 1", 2021, "33--45", 
-      "https://projecteuclid.org/journals/functiones-et-approximatio-commentarii-mathematici/current");
+      "https://projecteuclid.org/journals/functiones-et-approximatio-commentarii-mathematici/volume-65/issue-1");
       nbr();</script>
     <div class="resumecontent">
       This note provides accurate truncated formulae with  explicit error terms to
@@ -1308,8 +1308,8 @@ $
  asymptotic (with an error term) for the number of ideals
  with norm at most $x$ in a class of the narrow ray class group
  of $\mathbb{K}$ modulo $\mathfrak{q}$. This result bounds the error term with a
- constant whose dependence on $\mathfrak{q}$ is explicit but 
- dependence on $\mathbb{K}$ is not explicit.
+ constant whose dependence on $\mathfrak{q}$ is explicit while 
+ dependence on $\mathbb{K}$ is not.
  The aim of this paper is to prove this asymptotic with a fully 
  explicit bound for the error term.
       </div>
