--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -448,9 +448,11 @@ of A. S&aacute;rk&ouml;zy.
       </div>
   </li>
   <!-- ============================= -->
-    <li class="paper preprint"><script language="javascript">
-	Preprint("Notes on restriction theory in the primes",
-	"", "RestrictionTheory-03.pdf", 2021, 16, "Submitted");
+    <li class="paper"><script language="javascript">
+	Paper("Notes on restriction theory in the primes",
+	      "", "RestrictionTheory-03.pdf",
+	      "https://www.springer.com/journal/118562022",
+	      "Israel Journal of Math.", "vol. ", 2022, "16pp", "");
 	nbrp();</script>
       <div class="resumecontent">We study the mean
   $\sum_{x\in\mathcal{X}} \bigl|\sum_{p\le N}{}u_p e(xp)\bigr|^{\ell}$ when
@@ -1701,8 +1703,12 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
     </li>
     <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
-	Preprint("Higher Order Levin-Fa&#301;nle&#301;b Theorems",
-	"Alisa Sedunova and Ritika Sharma", "HLF-14-Hal.pdf", 2021, 15, "Submitted");
+	Paper("Higher Order Levin-Fa&#301;nle&#301;b Theorems",
+	      "Alisa Sedunova and Ritika Sharma", "HLF-14-Hal.pdf",
+	      "https://www.springer.com/journal/12044",
+	      "Proceedings - Mathematical Sciences (Published by the Indian Academy of Sciences)",
+	      "vol. ", 2022, "15pp",
+	      "")
 	nbrp();</script>
       <div class="resumecontent">
 	<img src="../trucs/alisa-sedunova-2019.jpg" height="110px"
