--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -453,7 +453,7 @@ of A. S&aacute;rk&ouml;zy.
 	      "", "RestrictionTheory-03.pdf",
 	      "https://www.springer.com/journal/118562022",
 	      "Israel Journal of Math.", "vol. ", 2022, "16pp", "");
-	nbrp();</script>
+	nbr();</script>
       <div class="resumecontent">We study the mean
   $\sum_{x\in\mathcal{X}} \bigl|\sum_{p\le N}{}u_p e(xp)\bigr|^{\ell}$ when
   $\ell$ covers the full range $[2,\infty)$ and
@@ -1702,14 +1702,14 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
     </div>
     </li>
     <!-- ============================= -->
-    <li class="paper preprint"><script language="javascript">
+    <li class="paper"><script language="javascript">
 	Paper("Higher Order Levin-Fa&#301;nle&#301;b Theorems",
 	      "Alisa Sedunova and Ritika Sharma", "HLF-14-Hal.pdf",
 	      "https://www.springer.com/journal/12044",
 	      "Proceedings - Mathematical Sciences (Published by the Indian Academy of Sciences)",
 	      "vol. ", 2022, "15pp",
 	      "")
-	nbrp();</script>
+	nbr();</script>
       <div class="resumecontent">
 	<img src="../trucs/alisa-sedunova-2019.jpg" height="110px"
 	     title="Alisa Sedunova">
