--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -208,6 +208,13 @@ academical and personal purpose.</i></font></CENTER>
   </tr>
 </table>
 </center>
+<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<blockquote style="max-width:60%"><FONT SIZE=+1 style="color:#800080; font-variant:small-caps"><i> 
+      Please be aware that the texts given below
+      may not be the ones that are finally published, especially if
+      the paper is less than three years old. I will send the proper final
+      version to anyone who requests it. </i></font></blockquote>
 
 
 
