--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -834,6 +834,58 @@ all moduli $k \le 72$&nbsp; and other small moduli.
     </div>
   </li>
   
+  <!-- ============================= -->
+  <li class="paper"><script language="javascript">
+      Paper("Product of three primes in large arithmetic progressions",
+      "Ramachandra Balasubramanian and Priyamvad Srivastav", "Footnote-Asymptotic-06-IJNT.pdf",
+      "https://www.worldscientific.com/toc/ijnt/0/0", 
+      "International Journal of Number Theory", 
+      "vol. ?? no ?", 2023, "16pp",
+      "https://dx.doi.org/");
+      nbr();</script>
+    <div class="resumecontent">
+	<img src="../trucs/balu.png" height="110px"
+	     title="Ramachandra Balasubramanian">	
+	<img src="../trucs/priyamvad-srivastav.jpeg" height="110px"
+	     title="Priyamvad Srivastav">	
+      For any $\epsilon>0$, there exists
+  $q_0(\epsilon)$ such for any $q\ge q_0(\epsilon)$ and any invertible residue
+  class $a$ modulo~$q$, there exists a natural number
+  that is congruent to $a$ modulo~$q$ and that
+  is the product of exactly three primes, all of which are below
+   $q^{\frac{3}{2}+\epsilon}$.
+  If we restrict our attention to odd moduli $q$ that do not have prime
+  factors congruent to~1 mod~4, we can find
+  such primes below $q^{\frac{11}{8}+\epsilon}$.
+  If we further
+  restrict our set of moduli to prime $q$ that are such that
+  $(q-1,4\cdot7\cdot11\cdot17\cdot23\cdot29)=2$, we can find
+  such primes below $q^{\frac{6}{5}+\epsilon}$. Finally, for any $\epsilon>0$, there exists
+  $q_0(\epsilon)$ such that when $q\ge q_0(\epsilon)$, there exists a natural number
+  that is congruent to $a$ modulo~$q$ and that
+  is the product of exactly four primes, all of which are below
+  $q(\log q)^6$.
+    </div>
+  </li>
+  <!-- ============================= -->
+  <li class="paper preprint"><script language="javascript">
+      Preprint("Explicit bounds for products of primes in AP",
+	       "Ramachandra Balasubramanian and Priyamvad Srivastav",
+	       "Footnote-Explicite-24-preprint", 2022, 32, "");
+      nbrp();</script>
+    <div class="resumecontent">
+	<img src="../trucs/balu.png" height="110px"
+	     title="Ramachandra Balasubramanian">	
+	<img src="../trucs/priyamvad-srivastav.jpeg" height="110px"
+	     title="Priyamvad Srivastav">	
+      For all $q\ge 2$ and for all invertible residue
+  classes $a$ modulo~$q$, there exists a natural number
+  that is congruent to $a$ modulo~$q$ and that
+  is the product of exactly three primes, all of which are below
+  $(10^{15}q)^{5/2}$. 
+    </div>
+  </li>
+  
   </ol><br>
   </li>
 <!-- ======================================================================= -->
@@ -1305,7 +1357,7 @@ $
   <!-- ============================= -->
     <li class="paper"><script language="javascript">
 	Paper("Counting ideals in ray classes",
-	"Sanoli Gun and Jyothsnaa Sivaraman", "",
+	"Sanoli Gun and Jyothsnaa Sivaraman", "http://arxiv.org/abs/2208.06602",
 	"https://www.worldscientific.com/worldscinet/ijnt",
 	"International Journal of Number Theory",
 	"vol. ? no ?", 2022, "??--??",
@@ -1322,7 +1374,43 @@ $
  The aim of this paper is to prove this asymptotic with a fully 
  explicit bound for the error term.
       </div>
+  <!-- ============================= -->
+    <li class="paper preprint"><script language="javascript">
+	Preprint("Representing ideal classes of 
+ray class groups by product of prime ideals of small size",
+	"Jean-Marc Deshouillers and Sanoli Gun and Jyothsnaa Sivaraman", 
+		 "", 2022, 36,"");
+	nbrp();</script>
+      <div class="resumecontent">
+	We prove that, for every modulus $\mathfrak{q}$, every class of the
+ narrow ray class group $H_{\mathfrak{q}}(\mathbb{K})$ of an arbitrary number field $\mathbb{K}$
+contains a product of three unramified prime ideals $\mathfrak{p}$ of degree
+one with $\mathfrak{N}\mathfrak{p}\le (t(\mathbb{K})\mathfrak{N}\mathfrak{q})^3$, where $t(\mathbb{K})$ is an
+explicit function of $\mathbb{K}$ described below. To achieve this
+result, we first obtain a sharp explicit Brun-Titchmarsh Theorem for ray
+classes and then an equally explicit improved Brun-Titchmarsh Theorem for
+large subgroups of narrow ray class groups. En route, we deduce an explicit upper bound 
+for the least prime ideal in a quadratic subgroup of a narrow ray class group
+and also for the size of the least ideal that is a product of degree one
+primes in any given class of $H_{\mathfrak{q}}(\mathbb{K})$.
+      </div>
   </li>
+  <!-- ============================= -->
+    <li class="paper preprint"><script language="javascript">
+	Preprint("An application of counting ray classes in ray classes",
+	"Sanoli Gun and Jyothsnaa Sivaraman", 
+		 "", 2022, 16 ,"");
+	nbrp();</script>
+      <div class="resumecontent">
+	In this article, we prove a fully explicit generalized
+Brun-Titchmarsh theorem for an imaginary quadratic field $\mathbb{K}$. More precisely,
+ for any finite family of linearly independent 
+linear forms with coefficients in $\mathcal{O}_{\mathbb{K}}$, we count the number of integers 
+at which all these linear forms
+take prime values in $\mathcal{O}_{\mathbb{K}}$.
+      </div>
+    </li>
+    
   </ol><br>
   </li>
 <!-- ======================================================================= -->
