--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -874,7 +874,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
 	       "Footnote-Explicite-24-preprint", 2022, 32, "");
       nbrp();</script>
     <div class="resumecontent">
-	<img src="../trucs/balu.png" height="110px"
+	<img src="../trucs/Balu.png" height="110px"
 	     title="Ramachandra Balasubramanian">	
 	<img src="../trucs/priyamvad-srivastav.jpeg" height="110px"
 	     title="Priyamvad Srivastav">	
@@ -1376,8 +1376,7 @@ $
       </div>
   <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
-	Preprint("Representing ideal classes of 
-ray class groups by product of prime ideals of small size",
+	Preprint("Representing ideal classes of ray class groups by product of prime ideals of small size",
 	"Jean-Marc Deshouillers and Sanoli Gun and Jyothsnaa Sivaraman", 
 		 "", 2022, 36,"");
 	nbrp();</script>
