--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -844,7 +844,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       "https://dx.doi.org/");
       nbr();</script>
     <div class="resumecontent">
-	<img src="../trucs/balu.png" height="110px"
+	<img src="../trucs/Balu.jpeg" height="110px"
 	     title="Ramachandra Balasubramanian">	
 	<img src="../trucs/priyamvad-srivastav.jpeg" height="110px"
 	     title="Priyamvad Srivastav">	
@@ -874,7 +874,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
 	       "Footnote-Explicite-24-preprint", 2022, 32, "");
       nbrp();</script>
     <div class="resumecontent">
-	<img src="../trucs/Balu.png" height="110px"
+	<img src="../trucs/Balu.jpeg" height="110px"
 	     title="Ramachandra Balasubramanian">	
 	<img src="../trucs/priyamvad-srivastav.jpeg" height="110px"
 	     title="Priyamvad Srivastav">	
