--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1364,7 +1364,11 @@ $
 	"http://dx.doi.org/??");
 	nbr();</script>
       <div class="resumecontent">
-	Let $\mathbb{K}$ be a number field and $\mathfrak{q}$ an integral ideal in $\mathcal{O}_{\mathbb{K}}$.
+	<img src="../trucs/Sanoli.jpeg" height="110px"
+	     title="Sanoli Gun">
+	  <img src="../trucs/Jyothsnaa.jpeg" height="110px"
+     title="Jyothsnaa Sivaraman">
+  Let $\mathbb{K}$ be a number field and $\mathfrak{q}$ an integral ideal in $\mathcal{O}_{\mathbb{K}}$.
  A result of Tatuzawa from 1973 computes the
  asymptotic (with an error term) for the number of ideals
  with norm at most $x$ in a class of the narrow ray class group
@@ -1381,8 +1385,14 @@ $
 		 "", 2022, 36,"");
 	nbrp();</script>
       <div class="resumecontent">
+	<img src="../trucs/JMD.jpeg" height="110px"
+	     title="Jean-Marc Deshouillers">
+	<img src="../trucs/Sanoli.jpeg" height="110px"
+	     title="Sanoli Gun">
+	  <img src="../trucs/Jyothsnaa.jpg" height="110px"
+	       title="Jyothsnaa Sivaraman">
 	We prove that, for every modulus $\mathfrak{q}$, every class of the
- narrow ray class group $H_{\mathfrak{q}}(\mathbb{K})$ of an arbitrary number field $\mathbb{K}$
+  narrow ray class group $H_{\mathfrak{q}}(\mathbb{K})$ of an arbitrary number field $\mathbb{K}$
 contains a product of three unramified prime ideals $\mathfrak{p}$ of degree
 one with $\mathfrak{N}\mathfrak{p}\le (t(\mathbb{K})\mathfrak{N}\mathfrak{q})^3$, where $t(\mathbb{K})$ is an
 explicit function of $\mathbb{K}$ described below. To achieve this
@@ -1401,6 +1411,10 @@ primes in any given class of $H_{\mathfrak{q}}(\mathbb{K})$.
 		 "", 2022, 16 ,"");
 	nbrp();</script>
       <div class="resumecontent">
+	<img src="../trucs/Sanoli.jpeg" height="110px"
+	     title="Sanoli Gun">
+	<img src="../trucs/Jyothsnaa.jpg" height="110px"
+	     title="Jyothsnaa Sivaraman">
 	In this article, we prove a fully explicit generalized
 Brun-Titchmarsh theorem for an imaginary quadratic field $\mathbb{K}$. More precisely,
  for any finite family of linearly independent 
