--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -107,7 +107,7 @@ MathJax.Hub.Config({
 	</dt>
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
 <dd><a href="#Recherche">Articles de recherche</a>
-  <span class="bidule">+</span></dd>
+  <span class="bidule">+++</span></dd>
   <div class="moremenu">
 <font size="-1">
   <dd>&nbsp;&nbsp;&nbsp;
