--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1358,8 +1358,8 @@ $
     <li class="paper"><script language="javascript">
 	Paper("Counting ideals in ray classes",
 	"Sanoli Gun and Jyothsnaa Sivaraman", "http://arxiv.org/abs/2208.06602",
-	"https://www.worldscientific.com/worldscinet/ijnt",
-	"International Journal of Number Theory",
+	"https://www.sciencedirect.com/journal/journal-of-number-theory",
+	"Journal of Number Theory",
 	"vol. ? no ?", 2022, "??--??",
 	"http://dx.doi.org/??");
 	nbr();</script>
@@ -1367,7 +1367,8 @@ $
 	<img src="../trucs/Sanoli.jpeg" height="110px"
 	     title="Sanoli Gun">
 	  <img src="../trucs/Jyothsnaa.jpeg" height="110px"
-     title="Jyothsnaa Sivaraman">
+	       title="Jyothsnaa Sivaraman">
+	    <br>
   Let $\mathbb{K}$ be a number field and $\mathfrak{q}$ an integral ideal in $\mathcal{O}_{\mathbb{K}}$.
  A result of Tatuzawa from 1973 computes the
  asymptotic (with an error term) for the number of ideals
@@ -1381,7 +1382,7 @@ $
   <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
 	Preprint("Representing ideal classes of ray class groups by product of prime ideals of small size",
-	"Jean-Marc Deshouillers and Sanoli Gun and Jyothsnaa Sivaraman", 
+	"Jean-Marc Deshouillers, Sanoli Gun and Jyothsnaa Sivaraman", 
 		 "", 2022, 36,"");
 	nbrp();</script>
       <div class="resumecontent">
@@ -1406,7 +1407,7 @@ primes in any given class of $H_{\mathfrak{q}}(\mathbb{K})$.
   </li>
   <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
-	Preprint("An application of counting ray classes in ray classes",
+	Preprint("An application of counting ideals in ray classes",
 	"Sanoli Gun and Jyothsnaa Sivaraman", 
 		 "", 2022, 16 ,"");
 	nbrp();</script>
@@ -1647,6 +1648,48 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       $\alpha$&nbsp;  and $\beta$&nbsp;  are irrational numbers satisfying  certain conditions.
     </div>
   </li>
+  <!-- ============================= -->
+  <li class="paper preprint"><script language="javascript">
+      Preprint("Notes on the domain of exponent pairs",
+      "Julien Cassaigne and Sary Drappeau", "",
+      2022,15,
+      "");
+      nbrp();</script>
+    <div class="resumecontent">
+	<img src="../trucs/Julien.jpeg" width="160px"
+	     title="Julien Cassaigne">
+      <img src="../trucs/Sary.jpeg" width="100px"
+	   title="Sary Drappeau">
+    The theory of exponent pairs as initiated by Phillipps in 1933
+    proposes pairs of exponents $(\kappa,\lambda)$ so that one has
+    $\sum_{n\sim N}e^{2i\pi\varphi(n)}\ll_\varepsilon
+    F^{\kappa+\varepsilon} N^{\lambda+\varepsilon}$, for any positive
+    $\varepsilon$, where $\varphi$ is a 'monomial-like' smooth
+    function whose first derivative is of size about $F$. We propose
+    to explore the domain of available pairs $(\kappa,\lambda)$
+    through a very geometrical approach. We prove in particular that
+    this domain is the convex hull of a connected curve in the
+    classical case. We also show that a possible choice for $\lambda$,
+    for any $\kappa\in[0,1/2]$, is given by
+    $\lambda=1-\frac{\kappa}{\log 2}\log\frac{2\kappa+1}{2\kappa}$. We
+    finally recall rapidly how this theory has been adapted to the
+    higher dimensional setting. In passing, we take the opporunity of
+    this slow-paced paper to describe some usage of the software SageMath.  
+    </div>
+  </li>
+<!-- ============================= -->
+  <li class="paper software"><script language="javascript">
+      Software("Sage Code for: Notes on the domain of exponent pairs", "" ,
+      "ExpPairsNote-01.sage", 2022, 423,
+      "Addendum to 'Notes on the domain of exponent pairs'");
+      nbrs();</script>
+    <div class="resumecontent">
+      <img src="../trucs/FourFreedoms.png" height="110px" 
+      title="See Free Software Fundation">  
+      This is the code we use in the paper 'Notes on the domain of exponent pairs'.
+    </div>
+  </li>
+
   </ol><br>
   </li>
 
@@ -1852,6 +1895,32 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
   integer sequences.
     </div>
   </li>
+ <!-- ======================================================================= -->
+ <li class="paper"><script language="javascript">
+      Paper("A modular analogue of a problem of Vinogradov",
+      "Ratnadeep Acharya, Sary Drappeau and Satadal Ganguly", 
+      "https://arxiv.org/abs/2208.14786",
+      "https://www.springer.com/journal/11139",
+      "The Ramanujan Journal",
+      "vol. ", 2022, "14pp");
+      nbr();</script>
+    <div class="resumecontent">
+	<img src="../trucs/Ratnadeep.jpg" width="120px"
+	     title="Ratnadeep Acharya">
+      <img src="../trucs/Sary.jpeg" width="100px"
+	   title="Sary Drappeau">
+      <img src="../trucs/Satadal.jpeg" width="90px"
+	   title="Satadal Ganguly">
+<br>
+Given a primitive, non-CM, holomorphic cusp form $f$ with normalized
+Fourier coefficients $a(n)$ and given an interval $I\subset[-2,2]$, we study the
+least prime $p$ such that $a(p)\in I$. This can be viewed as a modular form
+analogue of Vinogradov's problem on the least quadratic
+non-residue. We obtain strong explicit bounds on $p$, depending on the
+analytic conductor of $f$ for some specific choices of $I$.  
+    </div>
+ </li>
+ <!-- ======================================================================= -->
  <!-- ======================================================================= -->
 <!-- ======================================================================= -->
 <br>
