--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1357,11 +1357,11 @@ $
   <!-- ============================= -->
     <li class="paper"><script language="javascript">
 	Paper("Counting ideals in ray classes",
-	"Sanoli Gun and Jyothsnaa Sivaraman", "http://arxiv.org/abs/2208.06602",
+	"Sanoli Gun and Jyothsnaa Sivaraman", "CountingIdeals-jnt.pdf",
 	"https://www.sciencedirect.com/journal/journal-of-number-theory",
 	"Journal of Number Theory",
-	"vol. ? no ?", 2022, "??--??",
-	"http://dx.doi.org/??");
+	"vol. 243", 2023, "13--37",
+	"https://doi.org/10.1016/j.jnt.2022.08.005");
 	nbr();</script>
       <div class="resumecontent">
 	<img src="../trucs/Sanoli.jpeg" height="110px"
