--- a/index.html
+++ b/index.html
@@ -368,6 +368,12 @@ class="someword">O&ugrave; en sont les math&eacute;matiques ?</a>
 <a href="http://www.komal.hu/info/bemutatkozas.e.shtml" class="someword">Komal</a>, des exercices et des concours
    pour &eacute;l&egrave;ves et lyc&eacute;ens.
 </li>
+<li>
+Pr&eacute;sentation en <a href="https://www.experimentarium.fr/bds"
+   class="someword">Bandes dessin&eacute;es
+   scientifiques</a> de sujets scientifiques ! Rapides, pr&eacute;cis et
+   visuelles, un r&eacute;gal ! 
+</li>
 
 <li> <a href="http://www.dimensions-math.org/" class="someword" > Le film "Dimensions"</a> de
 Jos Leys, &Eacute;tienne Ghys et Aur&eacute;lien Alvarez. Il s'agit d'une
