--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2216,8 +2216,9 @@ the fundamentals of analytic number theory. It will also appeal to
 researchers in mathematics and engineering interested in experimental
 techniques in this active area.
 <br>
- A <a href="https://www.maa.org/press/maa-reviews/excursions-in-multiplicative-number-theory">review</a>
- from MAA.
+ The <a href="https://www.maa.org/press/maa-reviews/excursions-in-multiplicative-number-theory">review</a>
+ from MAA and
+ the <a href="https://zbmath.org/?q=an%3A7349511">review</a> from ZentralBlatt.
  <br> Typos <a href="../ExcursionsInMultiplicativeNT-Typos/contenu-typos.html">here</a>.
  </font>
 </blockquote>
