--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2017,7 +2017,7 @@ analytic conductor of $f$ for some specific choices of $I$.
   M&eacute;moire d'habilitation &agrave; diriger des recherches</a>
   <BR>
   <i>Les articles publi&eacute;s pr&eacute;sent&eacute;s dans cette th&egrave;se
-  ne ont pas incorpor&eacute;s &agrave; ce fichier, (2003), 352 pages.
+  ne sont pas incorpor&eacute;s &agrave; ce fichier, (2003), 352 pages.
   Published papers presented in this thesis have not been incorporated to this file.</i>
   </li>
 
