--- a/Jeux/Solitaire/SolitaireJeu-en.html
+++ b/Jeux/Solitaire/SolitaireJeu-en.html
@@ -103,6 +103,7 @@ that enable us to study (or play!) this game.
 	        <option value="d2">The diamant</option>
 	        <option value="d3">The short bow</option>
 	        <option value="d4">The long bow</option>
+	        <option value="d32">The vial</option>
 	        <option value="d5">The glass</option>
 	        <option>---------------</option>
 	        <option value="d17">Jump!</option>
