Croot-Laba-Sisask Lemma

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -585,7 +585,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
   </li>
  <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
-	Preprint("Corrigendum to ``Explicit estimates for the summatory function of $\Lambda(n)/n$ from the one of $\Lambda(n)$''",
+	Preprint("Corrigendum to ``Explicit estimates for the summatory function of $\\Lambda(n)/n$ from the one of $\\Lambda(n)$''",
 	"", "Corrigendum-PsiTildeSimple-Acta-02.pdf", 2022, 3, "Submitted");
 	nbrp();</script>
       <div class="resumecontent">
@@ -1689,6 +1689,21 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       This is the code we use in the paper 'Notes on the domain of exponent pairs'.
     </div>
   </li>
+    <!-- ============================= -->
+    <li class="paper preprint"><script language="javascript">
+	Preprint("A probability-free proof of an explicit Croot-Laba-Sisask Lemma",
+	"", "Croot-Laba-Sisask-Lemma-02.pdf", 2022, 6, "");
+	nbrp();</script>
+      <div class="resumecontent">
+	This note proposes a proof free of probabilistic language of the
+  famous Croot-Laba-Sisask Lemma. In between, we do the same for the
+  Khintchine and Marcinkiewicz-Zygmund inequalities and explicitate the
+  implied constants.
+      </div>
+    </li>
+    
+  <!-- ============================= -->
+
 
   </ol><br>
   </li>
