--- a/Maths/PetitLivre.html
+++ b/Maths/PetitLivre.html
@@ -98,7 +98,7 @@ restera toujours quelque chose :-) !
 Les formats :
 <ul>
 <li> Une 
-<a href="PetitLivreQuatro-2.pdf">
+<a href="PetitLivreLuluQuatro-2.pdf">
 version livre<a>, dont la couverture est affich&eacute;e ci-dessous.
 <br>
 
