--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -457,7 +457,7 @@ of A. S&aacute;rk&ouml;zy.
   <!-- ============================= -->
     <li class="paper"><script language="javascript">
 	Paper("Notes on restriction theory in the primes",
-	      "", "RestrictionTheory-03.pdf",
+	      "", "RestrictionTheory-IJM-06.pdf",
 	      "https://www.springer.com/journal/118562022",
 	      "Israel Journal of Math.", "vol. ", 2022, "21pp", "");
 	nbr();</script>
