--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -448,10 +448,21 @@ of A. S&aacute;rk&ouml;zy.
   </li>
   <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
-	Preprint("A spectral resolution of the large sieve and a circle method &agrave; la H. Iwaniec",
-	"", "", 2017, 65, "Submitted");
+	Preprint("A spectral resolution of the large sieve",
+	"", "LSE-46-N-04-submitted-1.pdf", 2023, 55, "Submitted");
 	nbrp();</script>
       <div class="resumecontent">
+	The quadratic form
+  $V(\varphi,Q)=\sum_{q\sim Q}\sum_{a\mod^* q}|S(\varphi,a/q)|^2$ and
+  its eigenvalues are well understood when $Q=o(\sqrt{N})$, while
+  $V(\varphi,Q)$ is expected to behave like a Riemann sum when
+  $N=o(Q)$. The behavior in the range $Q\in[\sqrt{N},100 N]$ is still
+  mysterious. In the present work we present a full spectral analysis
+  when $Q\ge N^{7/8}$ in terms of the eigenvalues of a one-parameter
+  family of nuclear difference operators. We show in particular that
+  (a smoothed version of) the quadratic form $V(\varphi,Q)$ may stay
+  \emph{away} from $(6/\pi^2)Q\sum_n|\varphi_n|^2$ when $Q\asymp N$,
+  though only on a vector space of positive but small dimension.
       </div>
   </li>
   <!-- ============================= -->
