--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ MathJax.Hub.Config({
       <div style="padding:10pt;">
   CNRS / Institut de Math&eacute;matiques de Marseille
   <BR>Aix Marseille Universit&eacute;,  U.M.R. 7373
-  <BR>Site Sud, Campus de Luminy, Case 907
+  <BR>Campus de Luminy, Case 907
   <BR>13288 MARSEILLE Cedex 9, France
   <BR>
 
