--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ MathJax.Hub.Config({
       <a href="http://math.univ-lille1.fr/~nwejm/"><font size=+1>The North-Western European Journal of Mathematics</font></a> 
     </span>
     <br><br><i>
-      &nbsp;&nbsp;An academic and non-profit journal for Mathematics from Lille
+      &nbsp;&nbsp;An academic and non-profit journal from Lille
     <br>
       &nbsp;&nbsp;with an international editorial committee
     <br>
@@ -212,7 +212,28 @@ MathJax.Hub.Config({
 </td>
 </tr>
 </table>
-</center>
+<table>
+	  <tr>
+	<td style="vertical-align:top;border:3px solid  #F4F4E9;">
+  <a href="https://nntdm.net"><img src="trucs/nntdm-small.jpg"
+  width="350pt" style="padding-left:2pt;"></a> 
+	</td>
+<td style="vertical-align:bottom;">
+    <span style="font-variant:small-caps;font-weight:bold;">
+      <a href="https://nntdm.net"><font size=+1>Notes on Number
+      Theory and Discrete Mathematics</font></a> 
+    </span>
+    <br><i>
+      &nbsp;&nbsp;An academic and non-profit journal from
+      <br>
+      &nbsp;&nbsp;the publishing house of the Bulgarian Academy of Sciences
+    <br>
+      &nbsp;&nbsp;with an international editorial committee
+    </i>
+</td>
+</tr>
+</table>
+      </center>
 
 <center>
 <table>
