--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -879,11 +879,14 @@ all moduli $k \le 72$&nbsp; and other small moduli.
     </div>
   </li>
   <!-- ============================= -->
-  <li class="paper preprint"><script language="javascript">
-      Preprint("Explicit bounds for products of primes in AP",
-	       "Ramachandra Balasubramanian and Priyamvad Srivastav",
-	       "Footnote-Explicite-24-preprint", 2022, 32, "");
-      nbrp();</script>
+  <li class="paper"><script language="javascript">
+      Paper("Explicit bounds for products of primes in AP",
+	    "Ramachandra Balasubramanian and Priyamvad Srivastav",
+	    "Footnote-Explicite-26-withbib.pdf",
+	    "Mathematics of Computation",
+	    "vol. ?? no ?", 2022, "32pp",
+	    "");
+      nbr();</script>
     <div class="resumecontent">
 	<img src="../trucs/Balu.jpeg" height="110px"
 	     title="Ramachandra Balasubramanian">	
