--- a/ServeurPerso/GP-PARI/index.html
+++ b/ServeurPerso/GP-PARI/index.html
@@ -53,20 +53,14 @@ still sometimes used.
 
 <ul>
 <li>
-Latest version is numbered 3.21 for gp-stuff and 1.00 for sli-tools.el.
+Latest version is numbered 3.22 for gp-stuff and 1.01 for sli-tools.el.
 Beware that versions higher than 3.04 introduce an additional variable in pari-conf.el.
 </li>
 <li> The <a href="3.21/pariemacs-3.21.tar.gz">
     bundle</a> tarred and gzipped. The included
-  <a href="3.21/README.txt">
-  README</a> file contains the installation procedure.
+  "README.txt"
+   file contains the installation procedure.
 </li>
-<li> The explanation file :
-  <a href="3.21/README.txt">
-  README</a>.
-</li>
-<li> All the <a href="3.21/">
-    files</a>.
 <li> The
   <a href="BugList.html"><b>bug list</b></a>.
 </li>
