--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1663,12 +1663,13 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
     </div>
   </li>
   <!-- ============================= -->
-  <li class="paper preprint"><script language="javascript">
-      Preprint("Notes on the domain of exponent pairs",
+  <li class="paper"><script language="javascript">
+      Paper("Notes on the domain of exponent pairs",
       "Julien Cassaigne and Sary Drappeau", "",
-      2022,15,
-      "");
-      nbrp();</script>
+      "http://www.ramanujanmathsociety.org/news-letter/",
+	    "Mathematics Newsletter",
+	    "vol. ? no. ?", 2022, "15pp", "");
+      nbr();</script>
     <div class="resumecontent">
 	<img src="../trucs/Julien.jpeg" width="160px"
 	     title="Julien Cassaigne">
