--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1885,11 +1885,11 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
     <!-- ============================= -->
     <li class="paper"><script language="javascript">
 	Paper("Higher Order Levin-Fa&#301;nle&#301;b Theorems",
-	      "Alisa Sedunova and Ritika Sharma", "HLF-14-Hal.pdf",
+	      "Alisa Sedunova and Ritika Sharma", "HLF-IAS.pdf",
 	      "https://www.springer.com/journal/12044",
 	      "Proceedings - Mathematical Sciences (Published by the Indian Academy of Sciences)",
 	      "vol. 133", 2023, "15pp",
-	      "https://doi.org/10.1007/s12044-022-00721-3")
+	      "https://www.ias.ac.in/describe/article/pmsc/133/0001")
 	nbr();</script>
       <div class="resumecontent">
 	<img src="../trucs/alisa-sedunova-2019.jpg" height="110px"
